--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
-        "mongoose": "^8.3.3"
+        "mongoose": "^8.3.3",
+        "node-cache": "^5.1.2"
     },
     "devDependencies": {
         "@eslint/js": "^9.1.1",
